; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_md_wrap.c_sha384_ctx_alloc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_md_wrap.c_sha384_ctx_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @sha384_ctx_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @sha384_ctx_alloc() #0 {
  %1 = alloca i8*, align 8
  %2 = call i8* @mbedtls_calloc(i32 1, i32 4)
  store i8* %2, i8** %1, align 8
  %3 = load i8*, i8** %1, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i8*, i8** %1, align 8
  %7 = bitcast i8* %6 to i32*
  %8 = call i32 @mbedtls_sha512_init(i32* %7)
  br label %9

9:                                                ; preds = %5, %0
  %10 = load i8*, i8** %1, align 8
  ret i8* %10
}

declare dso_local i8* @mbedtls_calloc(i32, i32) #1

declare dso_local i32 @mbedtls_sha512_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
